# fpsdotso-game

./: .env.example  .gitignore  BRIDGE_SUMMARY.md  CONNECTION_MANAGEMENT.md  Cargo.toml  IMPLEMENTATION_NOTES_3D_AUDIO.md  INTEGRATION_GUIDE.md  JAVASCRIPT_BRIDGE.md  README.md  SOLANA_INTEGRATION.md  VERIFY_WEBSOCKET.md  WEBSOCKET_DEBUG_GUIDE.md  WEBSOCKET_MULTIPLAYER.md  build-game.sh  build-web.sh  build.rs  test-runner.js
app/: .gitignore  DEBUG_CONSOLE.md  craco.config.js  package-lock.json  package.json  pnpm-lock.yaml
app/.vercel/: project.json
app/public/: fpsdotso-game.js  fpsdotso_game.data  fpsdotso_game.js  fpsdotso_game.wasm  index.html  manifest.json  test-bridge.html
app/src/: App.css  App.js  ephemeral-wallet.js  game-bridge.js  index.css  index.js  load-solana-wasm.js  service-worker.ts  solana-bridge.js  websocket-game-manager.js
app/src/components/: DebugConsole.js  EphemeralWalletPanel.js  KillFeed.css  KillFeed.js  LatencyDisplay.js  LobbyBrowser.css  LobbyBrowser.js  LobbyRoom.css  LobbyRoom.js  MatchStatus.css  MatchStatus.js  Minimap.css  Minimap.js  (+10 more)
game/: Cargo.toml  build.rs
game/src/: main.rs
game/src/game/: debug_menu.rs  game_state.rs  mod.rs  player.rs  touch_controls.rs
game/src/map/: map.rs  map_builder.rs  mod.rs
game/src/menu/: lobby_renderer.rs  lobby_tab.rs  lobby_ui.rs  lobby_view.rs  menu_state.rs  mod.rs  wallet_menu.rs  weapons_tab.rs
game/src/raycaster/: map2d.rs  mod.rs  renderer.rs
idls/: matchmaking.json
public/: rust-raylib.js  rust-raylib.wasm
solana-client/: Cargo.toml
solana-client/src/: lib.rs
(+14 files in other folders)
