[package]
name = "fpsdotso-game"
version = "0.1.0"
edition = "2021"

[dependencies]
raylib = "5.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
imgui = "0.12"
raylib_imgui = "1.0.1"
base64 = "0.21"
# NOTE: solana-client is built separately as a wasm-bindgen library
# and communication happens via JavaScript bridge