[package]
name = "solana-client"
version = "0.1.0"
edition = "2021"

# This is a library that will be compiled to WASM using wasm-bindgen
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm_client_anchor = { version = "0.9.0", features = ["js"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# For exposing functions to JavaScript
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
